// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzokOt crabCz"
>
  <li
    className="sc-fznKkj eGOTNr"
  >
    <span
      className="sc-AxhCb kcIJRg"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznKkj eGOTNr"
  >
    <span
      className="sc-AxhCb kcIJRg"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznKkj eGOTNr"
  >
    <span
      className="sc-AxhCb kcIJRg"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzokOt crabCz"
>
  <li
    className="sc-fznKkj sc-fznZeY dOMVcw"
  >
    <span
      className="sc-AxhCb kcIJRg"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznKkj sc-fznZeY dOMVcw"
  >
    <span
      className="sc-AxhCb kcIJRg"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznKkj sc-fznZeY dOMVcw"
  >
    <span
      className="sc-AxhCb kcIJRg"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
